<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image">

    <!-- Centered text -->
    <TextView
        android:id="@+id/sendMoneyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:alpha="0.75"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/swipe_right_to_confirm"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- The slider at 50% alpha -->

    <TextView
        android:id="@+id/sendMoneyText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.75"
        android:background="@drawable/bg_rounded_gray"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:padding="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="16dp"
        android:text="@string/send_money_to_john"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <ImageView
        android:id="@+id/vippsIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:alpha="1"
        android:contentDescription="@string/vipps"
        android:scaleType="centerInside"

        android:src="@drawable/vipps"
        app:layout_constraintBottom_toBottomOf="@+id/sendMoneyText2"
        app:layout_constraintStart_toStartOf="@+id/sendMoneyText2"
        app:layout_constraintTop_toTopOf="@+id/sendMoneyText2" />

    <com.google.android.material.slider.Slider
        android:id="@+id/swipeSlider"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:alpha="0.5"

        android:background="@drawable/bg_rounded_gray"
        android:foreground="@drawable/bg_rounded_gray"
        android:stepSize="0"
        android:theme="@style/Widget.CircleThumbSlider"
        android:value="50"

        android:valueFrom="0"
        android:valueTo="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:thumbHeight="64dp" />

    <!-- "Cancel" icon on the left, full opacity -->
    <ImageView
        android:id="@+id/denyIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:alpha="1"
        android:contentDescription="@string/cancel"
        android:scaleType="fitXY"

        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/swipeSlider"
        app:layout_constraintStart_toStartOf="@+id/swipeSlider"
        app:layout_constraintTop_toTopOf="@+id/swipeSlider" />

    <!-- "Confirm" icon on the right, full opacity -->
    <ImageView
        android:id="@+id/confirmIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:alpha="1"
        android:contentDescription="@string/confirm"
        android:scaleType="fitXY"

        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="@+id/swipeSlider"
        app:layout_constraintEnd_toEndOf="@+id/swipeSlider"
        app:layout_constraintTop_toTopOf="@+id/swipeSlider" />
</androidx.constraintlayout.widget.ConstraintLayout>
